update animation library, bugfix: export without scripts, update export while switching project

--- a/js/animation-library/_examples/text-typing/_example.html
+++ b/js/animation-library/_examples/text-typing/_example.html
@@ -17,11 +17,13 @@
 	</style>
 	<script type="text/javascript" src="../_base/_base.js"></script>
 	<script type="text/javascript" src="../_global-functions/_global-functions.js"></script>
-	<script type="text/javascript" src="textTyping.js"></script>
+	<script type="text/javascript" src="text-typing.js"></script>
 </head>
 
 <body>
+	<a href="#">
 	<div id="elemID"></div>
+	</a>
 	<br/>
 	<div id="elemIDsecond"></div>
 	<br/>
